# AI-Mobile-Perception-System

./: .gitignore  README.md  SETUP_GUIDE.md  export_engine.sh  extract_docx.py  paper.tex  setup_ptp.sh  system_diagram.html  system_diagram.mmd
dummy/: dumm.py
src/mobile_mast/: package.xml  setup.cfg  setup.py
src/mobile_mast/config/camera/: bullet1_intrinsics.yaml  bullet2_intrinsics.yaml  bullet3_intrinsics.yaml  bullet4_intrinsics.yaml  initial_angles_bullet1.csv  lidar_to_bullet1.yaml  region_bullet1.csv  tracker_bullet1.yaml  tracker_bullet2.yaml  tracker_bullet3.yaml  tracker_bullet4.yaml
src/mobile_mast/config/lidar/: background_ascii.pcd  global_fusion.yaml  lidar_background_params.yaml  lidar_cluster_params.yaml  metadata.yaml
src/mobile_mast/launch/: mobile_mast_all.launch.py  mobile_mast_orin1.launch.py  mobile_mast_orin2.launch.py  mobile_mast_orin3.launch.py  record_all.launch.py
src/mobile_mast/mobile_mast/: axis_camera_ros.py  camera_image_to_3d.py  camera_tracker.py  camerainfo_publisher_node.py  global_fusion_node.py  lidar_background_subtraction.py  lidar_cluster_node.py  manual_calibrator.py  qt_calibrator.py  rslidar_preprocess.py  tracks_to_markers_node.py  vpi_undistort_node.py  yolo11_detector.py
src/mobile_mast/rviz/: mobile_mast.rviz
src/rslidar_msg/: CMakeLists.txt
src/rslidar_sdk/: CMakeLists.txt
src/rslidar_sdk/config/: config.yaml
yolo11n_saved_model/: fingerprint.pb  metadata.yaml
