<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_mast</name>
  <version>0.0.0</version>
  <description>Mobile mast project (cameras + lidar launch)</description>

  <maintainer email="ashfaqafr24@gmail.com">ashfaq</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>visualization_msgs</depend>



  <!-- Needed because this package provides launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- We launch rslidar_sdk node from our launch file -->
  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>rslidar_msg</exec_depend>

  <!-- Tests (optional) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>vision_msgs</depend>

  <exec_depend>ultralytics</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scikit-learn</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

